--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
     <string name="main_url">https://www.dianstudios.cn:8091/</string>
+    <string name="src_url">https://www.dianstudios.cn:8091/</string>
     <string name="app_name">Notice2.0</string>
     <string name="copyright">Copyright ©PHalfStudio</string>
-    <string name="version_code">Version 2.23.5.31</string>
+    <string name="version_code">Version 2.23.6.3</string>
     <string name="check_update">检查更新</string>
     <string name="user_private">隐私政策</string>
     <string name="run_to_america">留洋模式</string>
